@@ -22,6 +22,7 @@
     <File name="UseValueInPropertySetterTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="DontCompareWithNaNTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="ReviewDoubleAssignmentTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Gendarme.Rules.Correctness" />
